--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -67,27 +67,27 @@
     }
     &.portfolio-happy {
         background-color: #f8f8f8;
-        background-image: url("../img/portfolio/happy-bg.jp2");
+        background-image: url("../img/portfolio/happy-bg.webp");
         color: #080a3a;
     }
     &.portfolio-sheep {
         background-color: #61a446;
-        background-image: url("../img/portfolio/sheep-bg.jp2");
+        background-image: url("../img/portfolio/sheep-bg.webp");
         color: #ffffff;
     }
     &.portfolio-marmor {
         background-color: #dbdadf;
-        background-image: url("../img/portfolio/marmor-bg.jp2");
+        background-image: url("../img/portfolio/marmor-bg.webp");
         color: #292929
     }
     &.portfolio-dealr {
         background-color: #dc4c4b;
-        background-image: url("../img/portfolio/dealr-bg.jp2");
+        background-image: url("../img/portfolio/dealr-bg.webp");
         color: #ffffff;
     }
     &.portfolio-arena {
         background-color: #9cbcd2;
-        background-image: url("../img/portfolio/arena-bg.jp2");
+        background-image: url("../img/portfolio/arena-bg.webp");
         color: #464646;
     }
     &.end {
